# staskel

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yaml
src/: balancer.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  state.rs
src/proxy/: tcp.rs  udp.rs
src/routing/: least_connections.rs  mod.rs  round_robin.rs
tests/: integration.rs
