[package]
name = "staskel"
version = "0.1.0"
edition = "2021"
authors = ["staskel contributors"]
description = "A high-performance Layer 4 (TCP/UDP) load balancer written in Rust"
license = "MIT"
repository = "https://github.com/bagasdisini/staskel"
readme = "README.md"
keywords = ["load-balancer", "networking", "tcp", "udp", "proxy"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]

[profile.release]
lto = true
codegen-units = 1
strip = true
